Feature/#4 colors (#13)
#4 Adding colorization